Add weight and price units

--- a/frontend/src/app/add-product/add-product.component.html
+++ b/frontend/src/app/add-product/add-product.component.html
@@ -22,12 +22,12 @@
             </div>
 
             <div class="form-group">
-              <label for="productWeight">Weight</label>
+              <label for="productWeight">Weight (g)</label>
               <input class="form-control" type="text" id="productWeight" formControlName="weight" />
             </div>
 
             <div class="form-group">
-              <label for="productPrice">Price</label>
+              <label for="productPrice">Price (euros)</label>
               <input class="form-control" type="text" id="productPrice" formControlName="price" />
             </div>
 
