--- a/frontend/src/app/admin/admin.component.html
+++ b/frontend/src/app/admin/admin.component.html
@@ -65,11 +65,11 @@
                   <input type="text" class="form-control" id="tmpProductDescription" formControlName="description" value="{{p.description}}">
                 </div>
                 <div class="form-group">
-                  <label for="tmpProductWeight">Weight</label>
+                  <label for="tmpProductWeight">Weight (g)</label>
                   <input type="number" class="form-control" id="tmpProductWeight" formControlName="weight" value="{{p.weight}}">
                 </div>
                 <div class="form-group">
-                  <label for="tmpProductPrice">Price</label>
+                  <label for="tmpProductPrice">Price (euros)</label>
                   <input type="number" class="form-control" id="tmpProductPrice" formControlName="price" value="{{p.price}}">
                 </div>
                 <div class="form-group">
