--- a/frontend/src/app/admin/admin.component.html
+++ b/frontend/src/app/admin/admin.component.html
@@ -1,7 +1,7 @@
 <div class="container clear-navbar">
   <div class="row justify-content-center">
     <div class="col-md-8">
-      <h2 class="admin-component-header text-center">Admin</h2>
+      <h2 class="text-center">Admin</h2>
       <h4>Products: {{productAmount}}</h4>
     </div>
   </div>
