--- a/frontend/src/app/shopping-cart/contact-information.component.html
+++ b/frontend/src/app/shopping-cart/contact-information.component.html
@@ -74,39 +74,39 @@
         <form>
           <div class="form-group">
             <label>*Firstname</label>
-            <input type="text" class="form-control">
+            <input name="firstName" [(ngModel)]="firstName" type="text" value="moi" class="form-control">
           </div>
           <div class="form-group">
             <label>*Lastname</label>
-            <input type="text" class="form-control">
+            <input name="lastName" [(ngModel)]="lastName" type="text" class="form-control">
           </div>
           <div class="form-group">
             <label>*Street Address</label>
-            <input type="text" class="form-control">
+            <input name="street" [(ngModel)]="street" type="text" class="form-control">
           </div>
           <div class="row">
             <div class="col-4">
               <div class="form-group">
                 <label>*Postcode</label>
-                <input type="text" class="form-control">
+                <input name="postal" [(ngModel)]="postal" type="text" class="form-control">
               </div>
             </div>
             <div class="col-8">
               <div class="form-group">
                 <label>*City</label>
-                <input type="text" class="form-control">
+                <input name="city" [(ngModel)]="city" type="text" class="form-control">
               </div>
             </div>
           </div>
           <div class="form-group">
             <label>*Country</label>
-            <select class="form-control">
-              <option selected>Madagascar</option>
+            <select name="country" [(ngModel)]="country" class="form-control">
+              <option value="Madagascar">Madagascar</option>
             </select>
           </div>
           <div class="form-group">
             <label>*Email</label>
-            <input type="email" class="form-control">
+            <input name="email" [(ngModel)]="email" type="email" class="form-control">
             <small class="form-text text-muted">
               Order information is sent to this address.
             </small>
