--- a/frontend/src/app/shopping-cart/contact-information.component.html
+++ b/frontend/src/app/shopping-cart/contact-information.component.html
@@ -72,44 +72,54 @@
         </div>
 
         <form>
-          <div class="form-group">
-            <label>*Firstname</label>
-            <input name="firstName" [(ngModel)]="firstName" type="text" value="moi" class="form-control">
+          <div class="form-group" [class.has-danger]="firstNameError">
+            <label>First name*</label>
+            <input name="firstName" [(ngModel)]="firstName" type="text" value="moi" class="form-control form-control-danger">
+            <div *ngIf="firstNameError" class="form-control-feedback">Field is required.</div>
           </div>
-          <div class="form-group">
-            <label>*Lastname</label>
-            <input name="lastName" [(ngModel)]="lastName" type="text" class="form-control">
+          <div class="form-group" [class.has-danger]="lastNameError">
+            <label>Last name*</label>
+            <input name="lastName" [(ngModel)]="lastName" type="text" class="form-control form-control-danger">
+            <div *ngIf="lastNameError" class="form-control-feedback">Field is required.</div>
           </div>
-          <div class="form-group">
-            <label>*Street Address</label>
-            <input name="street" [(ngModel)]="street" type="text" class="form-control">
+          <div class="form-group" [class.has-danger]="streetError">
+            <label>Street address*</label>
+            <input name="street" [(ngModel)]="street" type="text" class="form-control form-control-danger">
+            <div *ngIf="streetError" class="form-control-feedback">Field is required.</div>
           </div>
           <div class="row">
             <div class="col-4">
-              <div class="form-group">
-                <label>*Postcode</label>
-                <input name="postal" [(ngModel)]="postal" type="text" class="form-control">
+              <div class="form-group" [class.has-danger]="postalError">
+                <label>Post code*</label>
+                <input name="postal" [(ngModel)]="postal" type="text" class="form-control form-control-danger">
+                <div *ngIf="postalError" class="form-control-feedback">Field is required.</div>
               </div>
             </div>
             <div class="col-8">
-              <div class="form-group">
-                <label>*City</label>
-                <input name="city" [(ngModel)]="city" type="text" class="form-control">
+              <div class="form-group" [class.has-danger]="cityError">
+                <label>City*</label>
+                <input name="city" [(ngModel)]="city" type="text" class="form-control form-control-danger">
+                <div *ngIf="cityError" class="form-control-feedback">Field is required.</div>
               </div>
             </div>
           </div>
-          <div class="form-group">
-            <label>*Country</label>
-            <select name="country" [(ngModel)]="country" class="form-control">
+          <div class="form-group" [class.has-danger]="countryError">
+            <label>Country*</label>
+            <select name="country" [(ngModel)]="country" class="form-control form-control-danger">
               <option value="Madagascar">Madagascar</option>
             </select>
+            <div *ngIf="countryError" class="form-control-feedback">Select a country.</div>
           </div>
-          <div class="form-group">
-            <label>*Email</label>
-            <input name="email" [(ngModel)]="email" type="email" class="form-control">
+          <div class="form-group" [class.has-danger]="emailError">
+            <label>Email*</label>
+            <input name="email" [(ngModel)]="email" type="email" class="form-control form-control-danger">
+            <div *ngIf="emailError" class="form-control-feedback">Invalid email.</div>
             <small class="form-text text-muted">
               Order information is sent to this address.
             </small>
+          </div>
+          <div *ngIf="!canContinue" class="alert alert-danger" role="alert">
+            <i class="material-icons info-icon">error_outline</i> Please fill out required fields.
           </div>
         </form>
       </div>
@@ -117,13 +127,14 @@
   </div>
 
   <!-- Navigation -->
+
   <div class="row justify-content-center bottom-navigation">
     <div class="col-4">
       <button routerLink="/shoppingcart" type="button" class="btn btn-secondary">Previous</button>
     </div>
     <div class="col-1"></div>
     <div class="col-4 text-right">
-      <button type="button" class="btn btn-primary">Continue</button>
+      <button (click)="continue()" type="button" class="btn btn-primary">Continue</button>
     </div>
   </div>
 </div>
