--- a/frontend/src/app/shopping-cart/payment.component.html
+++ b/frontend/src/app/shopping-cart/payment.component.html
@@ -3,7 +3,7 @@
   <div class="row justify-content-center">
     <div class="col-md-8 text-center cart-icons">
       <a routerLink="/shoppingcart">
-        <i class="material-icons cart-icon active-icon">shopping_cart</i>
+        <i class="material-icons cart-icon">shopping_cart</i>
       </a>
       <span class="line"></span>
       <a routerLink="/contactinfo">
@@ -11,7 +11,7 @@
       </a>
       <span class="line"></span>
       <a routerLink="/payment">
-        <i class="material-icons cart-icon">credit_card</i>
+        <i class="material-icons cart-icon active-icon">credit_card</i>
       </a>
       <span class="line-dotted"></span>
       <i class="material-icons cart-icon">done</i>
