--- a/frontend/src/app/shopping-cart/payment.component.html
+++ b/frontend/src/app/shopping-cart/payment.component.html
@@ -36,10 +36,10 @@
   </div>
 
   <div class="row justify-content-center bottom-navigation">
-    <div class="col-3">
+    <div class="col-6 col-md-3">
       <button routerLink="/contactinfo" type="button" class="btn btn-secondary">Previous</button>
     </div>
-    <div class="col-3 text-right">
+    <div class="col-6 col-md-3 text-right">
       <button (click)="continue()" type="button" class="btn btn-primary">Continue</button>
     </div>
   </div>
