--- a/frontend/src/app/shopping-cart/confirmation.component.html
+++ b/frontend/src/app/shopping-cart/confirmation.component.html
@@ -2,7 +2,7 @@
 
   <!-- Show stepper -->
   <div class="row justify-content-center">
-    <div class="col-md-6 text-center cart-icons">
+    <div class="col-md-8 text-center cart-icons">
       <a routerLink="/shoppingcart">
         <i class="material-icons cart-icon">shopping_cart</i>
       </a>
@@ -21,15 +21,10 @@
     </div>
   </div>
 
-  <div class="row justify-content-center">
-    <div class="col-md-6">
-      <h3 class="text-center">Confirmation</h3>
-    </div>
-  </div>
-
   <!-- Products -->
   <div *ngIf="cart.items.length > 0" class="row justify-content-center">
-    <div class="col-md-6">
+    <div class="col-md-8">
+      <h3 class="text-center">Confirmation</h3>
       <h4>Products</h4>
       <!-- Table head -->
       <table class="table table-sm">
@@ -61,7 +56,7 @@
   </div>
 
   <div class="row justify-content-center">
-    <div class="col-md-3">
+    <div class="col-md-4">
       <h4>Billing Information</h4>
       <address>
         <i class="material-icons confirmation-icon">person</i> {{ customer.firstName }} {{ customer.lastName }} <br />
@@ -70,7 +65,7 @@
         <span class="iconless">{{ customer.address.country }}</span>
         </address>
     </div>
-    <div class="col-md-3">
+    <div class="col-md-4">
       <h4>Shipping Information</h4>
       <address>
         <i class="material-icons confirmation-icon">person</i> {{ customer.firstName }} {{ customer.lastName }} <br />
@@ -82,18 +77,26 @@
   </div>
 
   <div class="row justify-content-center">
-    <div class="col-md-6">
+    <div class="col-md-8">
       <h4>Payment Method</h4>
       <i class="material-icons confirmation-icon">description</i> Billing
     </div>
   </div>
 
+  <div class="row justify-content-center">
+    <div class="col-md-8">
+      <div *ngIf="outOfStock" class="alert alert-danger" role="alert">
+        <strong>Oh snap!</strong> Change a few things up and try submitting again.
+      </div>
+    </div>
+  </div>
+
   <!-- Bottom nav -->
   <div class="row justify-content-center bottom-navigation">
-    <div class="col-6 col-md-3">
+    <div class="col-6 col-md-4">
       <button routerLink="/payment" type="button" class="btn btn-secondary">Previous</button>
     </div>
-    <div class="col-6 col-md-3 text-right">
+    <div class="col-6 col-md-4 text-right">
       <button (click)="confirm()" type="button" class="btn btn-primary">Order</button>
     </div>
   </div>
