Show total amount

--- a/frontend/src/app/shopping-cart/confirmation.component.html
+++ b/frontend/src/app/shopping-cart/confirmation.component.html
@@ -47,7 +47,7 @@
           <tr>
             <td></td>
             <td></td>
-            <td></td>
+            <td>{{ cart.total }}</td>
             <td>{{ getTotalPrice() }} &euro;</td>
           </tr>
         </tbody>
