--- a/frontend/src/app/shopping-cart/confirmation.component.html
+++ b/frontend/src/app/shopping-cart/confirmation.component.html
@@ -97,7 +97,7 @@
       <button routerLink="/payment" type="button" class="btn btn-secondary">Previous</button>
     </div>
     <div class="col-6 col-md-4 text-right">
-      <button (click)="confirm()" type="button" class="btn btn-primary">Order</button>
+      <button (click)="order()" type="button" class="btn btn-primary">Order</button>
     </div>
   </div>
 
