--- a/frontend/src/app/shopping-cart/shopping-cart.component.scss
+++ b/frontend/src/app/shopping-cart/shopping-cart.component.scss
@@ -52,7 +52,7 @@ h3 {
   margin-right: 10px;
 }
 
-h5 {
+.headline-order-form {
   margin: 5px auto 20px auto;
 }
 
@@ -75,6 +75,6 @@ h5 {
   margin-left: 38px;
 }
 
-h4 {
+.headline-confirmation {
   margin: 20px 0;
 }
