--- a/frontend/src/app/shopping-cart/confirmation.component.html
+++ b/frontend/src/app/shopping-cart/confirmation.component.html
@@ -25,7 +25,7 @@
   <div *ngIf="cart.items.length > 0" class="row justify-content-center">
     <div class="col-md-8">
       <h3 class="text-center">Confirmation</h3>
-      <h4>Products</h4>
+      <h4 class="headline-confirmation">Products</h4>
       <!-- Table head -->
       <table class="table table-sm">
         <thead class="thead-default">
@@ -57,7 +57,7 @@
 
   <div class="row justify-content-center">
     <div class="col-md-4">
-      <h4>Billing Information</h4>
+      <h4 class="headline-confirmation">Billing Information</h4>
       <address>
         <i class="material-icons confirmation-icon">person</i> {{ customer.firstName }} {{ customer.lastName }} <br />
         <i class="material-icons confirmation-icon">home</i> {{ customer.address.street }} <br />
@@ -66,7 +66,7 @@
         </address>
     </div>
     <div class="col-md-4">
-      <h4>Shipping Information</h4>
+      <h4 class="headline-confirmation">Shipping Information</h4>
       <address>
         <i class="material-icons confirmation-icon">person</i> {{ customer.firstName }} {{ customer.lastName }} <br />
         <i class="material-icons confirmation-icon">home</i> {{ customer.address.street }} <br />
@@ -78,7 +78,7 @@
 
   <div class="row justify-content-center">
     <div class="col-md-8">
-      <h4>Payment Method</h4>
+      <h4 class="headline-confirmation">Payment Method</h4>
       <i class="material-icons confirmation-icon">description</i> Billing
     </div>
   </div>
