--- a/frontend/src/app/shopping-cart/shopping-cart.component.html
+++ b/frontend/src/app/shopping-cart/shopping-cart.component.html
@@ -8,6 +8,8 @@
       <span class="line-dotted"></span>
       <i class="material-icons cart-icon">home</i>
       <span class="line-dotted"></span>
+      <i class="material-icons cart-icon">local_shipping</i>
+      <span class="line-dotted"></span>
       <i class="material-icons cart-icon">credit_card</i>
       <span class="line-dotted"></span>
       <i class="material-icons cart-icon">done</i>
