--- a/frontend/src/app/shopping-cart/confirmation.component.html
+++ b/frontend/src/app/shopping-cart/confirmation.component.html
@@ -11,6 +11,10 @@
         <i class="material-icons cart-icon">home</i>
       </a>
       <span class="line"></span>
+      <a routerLink="/shipping">
+        <i class="material-icons cart-icon">local_shipping</i>
+      </a>
+      <span class="line"></span>
       <a routerLink="/payment">
         <i class="material-icons cart-icon">credit_card</i>
       </a>
@@ -69,9 +73,9 @@
       <h4 class="headline-confirmation">Shipping Information</h4>
       <address>
         <i class="material-icons confirmation-icon">person</i> {{ customer.firstName }} {{ customer.lastName }} <br />
-        <i class="material-icons confirmation-icon">home</i> {{ customer.address.street }} <br />
-        <span class="iconless">{{ customer.address.city }}, {{ customer.address.postal }}</span> <br />
-        <span class="iconless">{{ customer.address.country }}</span>
+        <i class="material-icons confirmation-icon">home</i> {{ customer.deliveryAddress.street }} <br />
+        <span class="iconless">{{ customer.deliveryAddress.city }}, {{ customer.deliveryAddress.postal }}</span> <br />
+        <span class="iconless">{{ customer.deliveryAddress.country }}</span>
       </address>
     </div>
   </div>
