--- a/frontend/src/app/shopping-cart/contact-information.component.html
+++ b/frontend/src/app/shopping-cart/contact-information.component.html
@@ -10,6 +10,8 @@
         <i class="material-icons cart-icon active-icon">home</i>
       </a>
       <span class="line-dotted"></span>
+      <i class="material-icons cart-icon">local_shipping</i>
+      <span class="line-dotted"></span>
       <i class="material-icons cart-icon">credit_card</i>
       <span class="line-dotted"></span>
       <i class="material-icons cart-icon">done</i>
