Change paths to /shoppingcart/...

--- a/frontend/src/app/shopping-cart/contact-information.component.html
+++ b/frontend/src/app/shopping-cart/contact-information.component.html
@@ -6,7 +6,7 @@
         <i class="material-icons cart-icon">shopping_cart</i>
       </a>
       <span class="line"></span>
-      <a routerLink="/contactinfo">
+      <a routerLink="/shoppingcart/contactinfo">
         <i class="material-icons cart-icon active-icon">home</i>
       </a>
       <span class="line-dotted"></span>
