--- a/frontend/src/app/shopping-cart/shipping.component.html
+++ b/frontend/src/app/shopping-cart/shipping.component.html
@@ -6,11 +6,11 @@
         <i class="material-icons cart-icon">shopping_cart</i>
       </a>
       <span class="line"></span>
-      <a routerLink="/contactinfo">
+      <a routerLink="/shoppingcart/contactinfo">
         <i class="material-icons cart-icon">home</i>
       </a>
       <span class="line"></span>
-      <a routerLink="/shipping">
+      <a routerLink="/shoppingcart/shipping">
         <i class="material-icons cart-icon active-icon">local_shipping</i>
       </a>
       <span class="line-dotted"></span>
@@ -93,10 +93,10 @@
 
   <div class="row justify-content-center bottom-navigation">
     <div class="col-6 col-md-4">
-      <button routerLink="/contactinfo" type="button" class="btn btn-secondary">Previous</button>
+      <button routerLink="/shoppingcart/contactinfo" type="button" class="btn btn-secondary">Previous</button>
     </div>
     <div class="col-6 col-md-4 text-right">
-      <button routerLink="/payment" type="button" class="btn btn-primary">Continue</button>
+      <button routerLink="/shoppingcart/payment" type="button" class="btn btn-primary">Continue</button>
     </div>
   </div>
 </div>
