--- a/frontend/src/app/shopping-cart/shopping-cart.component.html
+++ b/frontend/src/app/shopping-cart/shopping-cart.component.html
@@ -74,7 +74,7 @@
   </div>
   <div *ngIf="cart.items.length > 0" class="row justify-content-center">
     <div class="col-md-8 text-right">
-      <button routerLink="/contactinfo" type="button" class="btn btn-primary">Continue</button>
+      <button routerLink="/shoppingcart/contactinfo" type="button" class="btn btn-primary">Continue</button>
     </div>
   </div>
 </div>
