--- a/frontend/src/app/shopping-cart/confirmation.component.html
+++ b/frontend/src/app/shopping-cart/confirmation.component.html
@@ -7,19 +7,19 @@
         <i class="material-icons cart-icon">shopping_cart</i>
       </a>
       <span class="line"></span>
-      <a routerLink="/contactinfo">
+      <a routerLink="/shoppingcart/contactinfo">
         <i class="material-icons cart-icon">home</i>
       </a>
       <span class="line"></span>
-      <a routerLink="/shipping">
+      <a routerLink="/shoppingcart/shipping">
         <i class="material-icons cart-icon">local_shipping</i>
       </a>
       <span class="line"></span>
-      <a routerLink="/payment">
+      <a routerLink="/shoppingcart/payment">
         <i class="material-icons cart-icon">credit_card</i>
       </a>
       <span class="line"></span>
-      <a routerLink="/confirmation">
+      <a routerLink="/shoppingcart/confirmation">
         <i class="material-icons cart-icon active-icon">done</i>
       </a>
     </div>
@@ -108,7 +108,7 @@
   <!-- Bottom nav -->
   <div class="row justify-content-center bottom-navigation">
     <div class="col-6 col-md-4">
-      <button routerLink="/payment" type="button" class="btn btn-secondary">Previous</button>
+      <button routerLink="/shoppingcart/payment" type="button" class="btn btn-secondary">Previous</button>
     </div>
     <div class="col-6 col-md-4 text-right">
       <button (click)="order()" type="button" class="btn btn-primary">Order</button>
