--- a/frontend/src/app/shopping-cart/payment.component.html
+++ b/frontend/src/app/shopping-cart/payment.component.html
@@ -6,15 +6,15 @@
         <i class="material-icons cart-icon">shopping_cart</i>
       </a>
       <span class="line"></span>
-      <a routerLink="/contactinfo">
+      <a routerLink="/shoppingcart/contactinfo">
         <i class="material-icons cart-icon">home</i>
       </a>
       <span class="line"></span>
-      <a routerLink="/shipping">
+      <a routerLink="/shoppingcart/shipping">
         <i class="material-icons cart-icon">local_shipping</i>
       </a>
       <span class="line"></span>
-      <a routerLink="/payment">
+      <a routerLink="/shoppingcart/payment">
         <i class="material-icons cart-icon active-icon">credit_card</i>
       </a>
       <span class="line-dotted"></span>
@@ -41,7 +41,7 @@
 
   <div class="row justify-content-center bottom-navigation">
     <div class="col-6 col-md-3">
-      <button routerLink="/shipping" type="button" class="btn btn-secondary">Previous</button>
+      <button routerLink="/shoppingcart/shipping" type="button" class="btn btn-secondary">Previous</button>
     </div>
     <div class="col-6 col-md-3 text-right">
       <button (click)="continue()" type="button" class="btn btn-primary">Continue</button>
